feat: song mixin,upload page

--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -3,7 +3,7 @@
 @import "./config/_reset.scss";
 
 // Components
-
+@import "./components/forms.scss";
 // Example: @import "./components/message.scss";
 
 // Screens
