--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -1,2 +1,12 @@
 header
-    div
+    nav
+        ul
+            li 
+                a(href="/") Home
+            li 
+                a(href="/login") Login
+            li 
+                a(href="/join") Join
+            li 
+                a(href="/songs/upload") Upload
+
