--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -6,7 +6,7 @@ block content
             label(for="audio") audio File
             input#audio(type="file", accept="audio/*", required, name="audio")
             label(for="thumb") Thumbnail File
-            input#thumb(type="file", accept="image/*", required, name="thumb")
+            input#thumb(type="file", accept="image/*",  name="thumb")
             input(
                 placeholder="Title",
                 required,
